<resources>
    <string name="app_name">My Application</string>
    <string name="booktitle">BookTitle</string>
    <string name="book_title">タイトル:</string>
    <string name="book_author">著者:</string>
    <string name="book_isbn">ISBN:</string>
    <string name="book_publisher">出版社</string>
    <string name="book_published">出版年</string>
    <string name="auther">Auther</string>
    <string name="menu_camera">カメラ</string>
    <string name="menu_search">検索</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">カメラを検出できませんでした</string>
    <string name="no_camera_permission">カメラを使用する権限がありません、アプリケーションを終了します</string>
    <string name="low_storage_error">デバイスのストレージの容量が少ないためダウンロードできませんでした</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">オートフォーカス</string>
    <string name="use_flash">フラッシュを使用する</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
</resources>
